--- a/iziozi/src/main/res/values/strings.xml
+++ b/iziozi/src/main/res/values/strings.xml
@@ -2,15 +2,18 @@
 <resources>
 
     <string name="app_name">IziOzi</string>
-    <string name="dummy_button">Dummy Button</string>
-    <string name="dummy_content">DUMMY\nCONTENT</string>
-    <string name="action_settings" >Settings
-    </string>
-    <string name="hello_world" >Hello world!
-    </string>
-    <string name="should" >I should say:</string>
+    <string name="action_settings" >Settings</string>
+    <string name="hello_world" >Hello world!</string>
+    <string name="should_say" >I should say:</string>
     <string name="speak_button">Speak!</string>
     <string name="tts_init">TTS init complete!</string>
-    <string name="edit_string">Edit Mode</string>
+    <string name="edit_mode">Edit Mode</string>
+    <string name="save">Save</string>
+    <string name="apply">Apply</string>
+    <string name="cancel">Cancel</string>
+    <string name="error">Error</string>
+    <string name="go_on">Continue</string>
+    <string name="xml_save_fail">Xml save failed!</string>
+
 
 </resources>
