--- a/iziozi/src/main/res/values/strings.xml
+++ b/iziozi/src/main/res/values/strings.xml
@@ -8,7 +8,7 @@
     <string name="continue_string">Continue</string>
     <string name="c_title">Title:</string>
     <string name="c_text">Text:</string>
-
+    <string name="s_search">Search</string>
 
     <!-- App specific strings -->
     <string name="app_name">IziOzi</string>
@@ -24,27 +24,28 @@
     <string name="tts_notinitialized">TTS not yet initialized!</string>
 
     <!-- Actions strings -->
-    <string name="settings" >Settings</string>
+    <string name="settings">Settings</string>
     <string name="edit_mode">Edit Mode</string>
     <string name="save">Save</string>
     <string name="exit">Exit</string>
 
-
     <!-- Debugging strings -->
-    <string name="should_say" >I should say:</string>
+    <string name="should_say">I should say:</string>
     <string name="speak_button">Speak!</string>
     <string name="tts_init">TTS init complete!</string>
     <string name="xml_save_fail">Xml save failed!</string>
 
-
     <!-- Device interface lock -->
     <string name="lock">Lock</string>
     <string name="unlock">Unlock</string>
+
     <plurals name="unlock_question">
         <item quantity="one">Are you sure you want to unlock the device UI?\n\nMake a choice in 1 second...</item>
         <item quantity="other">Are you sure you want to unlock the device UI?\n\nMake a choice in %d seconds...</item>
     </plurals>
 
-
+    <string name="title_activity_smimages_search">SMImagesSearchActivity</string>
+    <string name="hello_world">Hello world!</string>
+    <string name="action_settings">Settings</string>
 
 </resources>
