--- a/iziozi/src/main/res/values/strings.xml
+++ b/iziozi/src/main/res/values/strings.xml
@@ -47,6 +47,7 @@
     <string name="settings">Settings</string>
     <string name="edit_mode">Edit Mode</string>
     <string name="save">Save</string>
+    <string name="about">About</string>
     <string name="exit">Exit</string>
 
     <!-- Debugging strings -->
@@ -68,5 +69,24 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_ioabout">IOAboutActivity</string>
+
+    <string name="send_mail">Send mail...</string>
+
+    <string name="app_description">IziOzi is an aumentative and argumentative app. It is open source, completely free and in daily developement.
+        If you have any request, some suggestions or you want to tell us something, write us using the button here under!
+        If you think this is a useful project and you want to help us, please use the button at the bottom of the page to donate us supporting developement costs! Thank you!</string>
+    <string name="image_missing">Missing images!</string>
+    <string name="image_missing_text">Application will now download missing files. Please wait until all images are shown.</string>
+    <string name="download_error">File download error!</string>
+    <string name="image_save_error">There was a problem saving the image file!</string>
+    <string name="warning">Warning!</string>
+    <string name="data_connection_needed">You need an active data connection to configure a new button! You can\'t search new pictograms until data connection is unavailable!</string>
+    <string name="no_picto_found">No pictograms Found!</string>
+    <string name="image_download_title">Downloading Image ...</string>
+    <string name="download_text">Download in progress ...</string>
+    <string name="please_wait">Please wait ...</string>
+    <string name="search_in_progress">Search in progress ...</string>
+    <string name="unexpected_response">received an unexpected object!</string>
+    <string name="request_error">Error on http request!</string>
 
 </resources>
