--- a/iziozi/src/main/res/values-it/strings.xml
+++ b/iziozi/src/main/res/values-it/strings.xml
@@ -73,7 +73,7 @@
     <string name="title_activity_ioabout">IOAboutActivity</string>
 
 
-    <string name="app_description">IziOzi è un\'applicazione di comunicazione aumentativa e argomentativa open source, completamente gratuita e in continuo sviluppo.\n
+    <string name="app_description">IziOzi è un\'applicazione di comunicazione aumentativa e alternativa open source, completamente gratuita e in continuo sviluppo.\n
         Se hai delle richieste, dei suggerimenti o se vuoi dirci qualcosa, scrivici cliccando il pulsante qui sotto!\n
         Se infine credi che questo sia un progetto utile e vuoi darci una mano, usa il pulsante in fondo alla pagina per effettuare una donazione spontanea
         per supportare i costi di sviluppo! Grazie!</string>
