--- a/iziozi/src/main/res/values/strings.xml
+++ b/iziozi/src/main/res/values/strings.xml
@@ -72,7 +72,7 @@
 
     <string name="send_mail">Send mail...</string>
 
-    <string name="app_description">IziOzi is an aumentative and argumentative app. It is open source, completely free and in daily developement.
+    <string name="app_description">IziOzi is an aumentative and alternative communication app. It is open source, completely free and in daily developement.
         If you have any request, some suggestions or you want to tell us something, write us using the button here under!
         If you think this is a useful project and you want to help us, please use the button at the bottom of the page to donate us supporting developement costs! Thank you!</string>
     <string name="image_missing">Missing images!</string>
