--- a/iziozi/src/main/res/values/strings.xml
+++ b/iziozi/src/main/res/values/strings.xml
@@ -27,7 +27,7 @@
     <string name="error">Error</string>
     <string name="continue_string">Continue</string>
     <string name="c_title">Title:</string>
-    <string name="c_text">Text:</string>
+    <string name="c_text">Text to be spoken:</string>
     <string name="s_search">Search</string>
 
     <!-- App specific strings -->
@@ -36,6 +36,12 @@
     <string name="rows">Rows:</string>
     <string name="cols">Cols:</string>
     <string name="preview">Preview</string>
+    <string name="set_image">Set image</string>
+    <string name="img_search">Search on database</string>
+    <string name="img_camera">Pick from camera</string>
+    <string name="choose">Choose...</string>
+    <string name="img_gallery">Pick from gallery</string>
+
     <string name="tap_for_image">Tap here to insert an image!</string>
 
     <!-- TTS strings -->
