--- a/iziozi/src/main/res/values/strings.xml
+++ b/iziozi/src/main/res/values/strings.xml
@@ -57,6 +57,7 @@
     <!-- Actions strings -->
     <string name="settings">Settings</string>
     <string name="edit_mode">Edit Mode</string>
+    <string name="scan_mode">Scan mode</string>
     <string name="save">Save</string>
     <string name="about">About</string>
     <string name="exit">Exit</string>
