--- a/iziozi/src/main/res/values/strings.xml
+++ b/iziozi/src/main/res/values/strings.xml
@@ -24,30 +24,33 @@
     <!-- Generic strings -->
     <string name="apply">Apply</string>
     <string name="cancel">Cancel</string>
+    <string name="yes">Yes</string>
+    <string name="no">No</string>
+    <string name="confirm">Confirm</string>
     <string name="error">Error</string>
     <string name="continue_string">Continue</string>
     <string name="c_title">Title:</string>
     <string name="c_text">Text to be spoken:</string>
     <string name="s_search">Search</string>
+    <string name="manage_medias">Manage files</string>
 
     <!-- App specific strings -->
     <string name="app_name">IziOzi</string>
     <string name="btn_inserttext">Enter the text to say:</string>
     <string name="rows">Rows:</string>
     <string name="cols">Cols:</string>
+    <string name="show_borders">Show borders</string>
     <string name="preview">Preview</string>
     <string name="set_image">Set image</string>
     <string name="img_search">Search on database</string>
     <string name="img_camera">Pick from camera</string>
     <string name="choose">Choose...</string>
     <string name="img_gallery">Pick from gallery</string>
-
     <string name="tap_for_image">Tap here to insert an image!</string>
 
-    <!-- Hint Alert-->
+    <!-- Hint Alert -->
     <string name="welcome">Welcome</string>
     <string name="welcome_text">Welcome in IziOzi! To setup a new button, i\'m gonna enable the edit mode! Tap on any button to begin the configuration. When you have finished, disable the edit mode, lock the user interface in the menu and you\'re ready! To get more info, please refer to www.iziozi.org!</string>
-
 
     <!-- TTS strings -->
     <string name="tts_ready">I\'m ready to speak on your behalf!</string>
@@ -81,9 +84,7 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_ioabout">IOAboutActivity</string>
-
     <string name="send_mail">Send mail...</string>
-
     <string name="app_description">IziOzi is an aumentative and alternative communication app. It is open source, completely free and in daily developement.
         If you have any request, some suggestions or you want to tell us something, write us using the button here under!
         If you think this is a useful project and you want to help us, please use the button at the bottom of the page to donate us supporting developement costs! Thank you!</string>
@@ -100,5 +101,12 @@
     <string name="search_in_progress">Search in progress ...</string>
     <string name="unexpected_response">received an unexpected object!</string>
     <string name="request_error">Error on http request!</string>
+    <string name="file_delete_warning">Are you sure you want to delete file $1%s?</string>
+    <string name="insert_new_name">Insert the new file name:</string>
+    <string name="now_recording">We\'re recording!</string>
+    <string name="tap_to_stop_recording">Tap anywhere when you\'re gone!</string>
+    <string name="audio_file">Audio File: </string>
+    <string name="no_audio_file">No audio file set.</string>
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 </resources>
