Tree navigation + save as + load

--- a/iziozi/src/main/res/values-it/strings.xml
+++ b/iziozi/src/main/res/values-it/strings.xml
@@ -67,6 +67,9 @@
     <string name="save">Salva</string>
     <string name="about">Informazioni</string>
     <string name="exit">Esci</string>
+    <string name="save_as">Salva con nome</string>
+    <string name="load">Apri</string>
+
 
     <!-- Debugging strings -->
     <string name="should_say">Dovrei dire:</string>
@@ -113,6 +116,15 @@
     <string name="tap_to_stop_recording">Tocca lo schermo per terminare!</string>
     <string name="audio_file">File Audio: </string>
     <string name="no_audio_file">Nessun file audio associato</string>
+
+    <string name="image">IMG</string>
+    <string name="board">TAV</string>
+    <string name="board_enabled">Tavola ad abero</string>
+    <string name="edit_picto">Configura immagine</string>
+    <string name="edit_board">Configura Tavola</string>
+    <string name="file_already_exists">Un file con questo nome esiste già! Scegline un altro.</string>
+
+
 
 
 </resources>
