--- a/iziozi/src/main/res/values/strings.xml
+++ b/iziozi/src/main/res/values/strings.xml
@@ -118,6 +118,7 @@
     <string name="edit_picto">Setup pictogram</string>
     <string name="edit_board">Setup board</string>
     <string name="file_already_exists">A file with this name already exists! Please choose another one.</string>
+    <string name="delete_page_alert">Are you sure you want to delete this page? The operation will be persistent!</string>
 
 
 
