--- a/iziozi/src/main/res/values-it/strings.xml
+++ b/iziozi/src/main/res/values-it/strings.xml
@@ -125,6 +125,7 @@
     <string name="edit_board">Configura Tavola</string>
     <string name="file_already_exists">Un file con questo nome esiste già! Scegline un altro.</string>
     <string name="delete_page_alert">Sei sicuro di voler eliminare questa pagina? L\'operazione sarà definitiva!</string>
+    <string name="manage_boards">Gestisci tavole</string>
 
 
 
