--- a/iziozi/src/main/res/values-it/strings.xml
+++ b/iziozi/src/main/res/values-it/strings.xml
@@ -128,6 +128,10 @@
     <string name="manage_boards">Gestisci tavole</string>
 
 
+    <string name="new_board_alert">Attenzione, ogni modifica non salvata andrà persa!</string>
+
+
+
 
 
 </resources>
