--- a/iziozi/src/main/res/values/strings.xml
+++ b/iziozi/src/main/res/values/strings.xml
@@ -123,6 +123,7 @@
     <string name="delete_page_alert">Are you sure you want to delete this page? The operation will be persistent!</string>
     <string name="manage_boards">Manage boards</string>
 
+    <string name="new_board_alert">Warning! Every unsaved modify will be lost!</string>
 
 
 </resources>
