--- a/iziozi/src/main/res/values-it/strings.xml
+++ b/iziozi/src/main/res/values-it/strings.xml
@@ -135,7 +135,7 @@
     <string name="move_hint">Tocca ora la nuova posizione dove muovere l\'immagine. Le due immagini verranno scambiate.</string>
 
     <string name="delete_image">Cancella immagine</string>
-
+    <string name="title_activity_iovideo_player">Video</string>
 
 
 </resources>
