--- a/iziozi/src/main/res/values/strings.xml
+++ b/iziozi/src/main/res/values/strings.xml
@@ -121,10 +121,23 @@
     <string name="new_board_alert">Warning! Every unsaved modify will be lost!</string>
 
     <!-- Move mode -->
-    <string name="swap_board">Move image</string>
+    <string name="swap_board">Swap images</string>
     <string name="move">Move</string>
     <string name="move_hint">Tap on the position where the image should be moved. The two images will be swapped.</string>
     <string name="delete_image">Delete image</string>
     <string name="title_activity_iovideo_player">Video</string>
+    <string name="add_intent">Link application</string>
+    <string name="remove_intent">Remove application</string>
+    <string name="application_name">App:</string>
+    <string name="no_application">No app selected.</string>
+    <string name="enable_swipe">Swipe to change page</string>
+    <string name="enable_giga_navigation">Big navigation buttons</string>
+    <string name="tree_board">Tree board</string>
+    <string name="delete_image_alert">Are you sure you want to delete  this image? The operation will be persistent!</string>
+    <string name="not_yet_implemented">Ooops! This functionality is a work in progress... Coming soon!</string>
+    <string name="tree_alert_text">The tree table is a special kind of setting that you can use to ad a table inside an image. This table will be shown when you tap on the parent image.</string>
+    <string name="disable">Disable</string>
+    <string name="set">Set</string>
+    <string name="tts_unavailable">Android text to speech(TTS) is unavailable. Please check your system settings.</string>
 
 </resources>
