--- a/iziozi/src/main/res/values-it/strings.xml
+++ b/iziozi/src/main/res/values-it/strings.xml
@@ -22,6 +22,8 @@
 
 <resources>
 
+    <string name="tutorial">Tutoriale</string>
+
     <!-- Generic strings -->
     <string name="apply">Applica</string>
     <string name="cancel">Annulla</string>
