Added language support switch between English and Italian.

--- a/iziozi/src/main/res/values-it/strings.xml
+++ b/iziozi/src/main/res/values-it/strings.xml
@@ -22,6 +22,12 @@
 
 <resources>
 
+    <!-- String languages -->
+    <string-array name="languages_array">
+        <item>Inglese</item>
+        <item>Italiano</item>
+    </string-array>
+
     <string name="tutorial">Tutoriale</string>
 
     <!-- Generic strings -->
@@ -151,6 +157,8 @@
     <string name="disable">Disabilita</string>
     <string name="set">Configura</string>
     <string name="tts_unavailable">Il motore di sintesi vocale(TTS) di Android non è disponibile. Controlla le tue impostazioni di sistema.</string>
+    <string name="language">Lingua</string>
+    <string name="finish">Fine</string>
 
 
 </resources>
