Extended language support for some strings to French, Spanish and German.

--- a/iziozi/src/main/res/values-it/strings.xml
+++ b/iziozi/src/main/res/values-it/strings.xml
@@ -26,6 +26,9 @@
     <string-array name="languages_array">
         <item>Inglese</item>
         <item>Italiano</item>
+        <item>Spagnolo</item>
+        <item>Francese</item>
+        <item>Tedesco</item>
     </string-array>
 
     <string name="tutorial">Tutoriale</string>
