Fixed the bug that made the action bar not display properly when unlocking the display.
There were two bugs, one in portrait mode where the action bar wasn't positioned immediately below the status bar but lower. The other in landscape mode where the action bar was positioned lower and more to the left, leaving a gap on the right side.

--- a/iziozi/src/main/res/values-it/strings.xml
+++ b/iziozi/src/main/res/values-it/strings.xml
@@ -31,7 +31,7 @@
         <item>Tedesco</item>
     </string-array>
 
-    <string name="tutorial">Tutoriale</string>
+    <string name="tutorial">Tutorial</string>
 
     <!-- Generic strings -->
     <string name="apply">Applica</string>
