Implemented an Alert dialog when the user pressed the back button on the create button activity.
The user is asked if he wants to quit without saving his changes.

--- a/iziozi/src/main/res/values/strings.xml
+++ b/iziozi/src/main/res/values/strings.xml
@@ -240,4 +240,6 @@
 
     <string name="feature_unavailable">This feature is not available on your device.</string>
 
+    <string name="alert_dialog_exit">Are you sure you want to leave? Your modifications will NOT be
+        saved.</string>
 </resources>
